--- a/src/components-css/Navbar.css
+++ b/src/components-css/Navbar.css
@@ -81,7 +81,7 @@
     box-sizing: border-box;
     display: flex;
     position: absolute;
-    top: 8vh;
+    top: 8dvh;
     background-color: #4b0c0f;
     z-index: 1;
     margin: 0;
